# Utile

./: .gitignore  manage.py  pyproject.toml
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/javascripts/: slider.js  upgrade.js
frontend/public/stylesheets/: services.css  slider.css  upgrade.css
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/app/: routes.ts
frontend/src/app/pages/: JobPool.tsx  LandingPage.tsx  MobileDashboard.tsx  MobileJobPool.tsx  (+1 more)
frontend/src/components/: Layout.tsx  Navigation.tsx  index.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: index.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ServicesPage.tsx  home.tsx  index.ts  job-pool.tsx  provider-dashboard.tsx
frontend/src/services/: api.service.ts
frontend/src/styles/: theme.css
frontend/src/theme/: ThemeProvider.tsx  muiTheme.ts  tokens.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
orders/: models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
payments/: models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py
services/: models.py  serializers.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
utile/: asgi.py  settings.py  urls.py  wsgi.py
(+16 files in other folders)
